...

    object FileUid {
        const val CONFLICT = "conflict"
    }

    object Path {
        val NO_CHANGES = "/test-no-changes.kdbx"
        val REMOTE_CHANGES = "/test-remote-changes.kdbx"
        val LOCAL_CHANGES = "/test-local-changes.kdbx"

        // files with errors
        val NOT_FOUND = "/errors/test-not-found.kdbx"
        val AUTH_ERROR = "/errors/test-auth-error.kdbx"
...
        val ATTACHMENTS = "/examples/test-attachments.kdbx"

        // conflicts
        val CONFLICT = "/conflicts/test-conflict.kdbx"

        // keys
        val KEY = "/keys/key"

        // demo
        val PASSWORDS = "/demo/passwords.kdbx"
        val PASSWORDS_MODIFID = "/demo/passwords-modified.kdbx"
    }

...
