...
    <string name="git">Git</string>
    <string name="device">Device</string>
    <string name="no_items">No items</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_with_colon" translatable="false">%s:</string>
...
    <string name="retry">Retry</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="open_file">Open file</string>
    <string name="new_file">New file</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ok">Ok</string>
...
    <string name="lock">Lock</string>
    <string name="resolve">Resolve</string>
    <string name="remove">Remove</string>
    <string name="add_templates">Add entry templates</string>
    <string name="more_options">More options</string>
    <string name="paste">Paste</string>
...

    <!-- Accessibility descriptions -->
    <string name="url">URL</string>
    <string name="unlock_button">Unlock button</string>
    <string name="eye_icon">Eye icon</string>
    <string name="loading_indicator">Loading indicator</string>
    <string name="generate_icon">Generate icon</string>

...
    <!-- New database screen -->
    <string name="new_database">New database</string>
    <string name="file_name">File name</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="you_entered_two_different_passwords_please_try_again">You entered two different passwords. Please try again.</string>
    <string name="this_field_should_match_password">This field should match password</string>
    <string name="storage_type">Storage type</string>
    <string name="not_selected">Not selected</string>
    <string name="dot_kdbx">.kdbx</string>
    <string name="private_storage">Private storage</string>
...
    <string name="groups_with_count">Groups: %d</string>
    <string name="groups_and_entries_with_count">Groups: %1$d  Entries: %2$d</string>
    <string name="new_item_entry_standard_entry">Standard Entry</string>
    <string name="new_item_entry_new_group">New Group</string>
    <string name="note_remove_confirmation_message">Are you sure want to remove entry "%s" ?</string>
    <string name="group_remove_confirmation_message">Are you sure want to remove this group?</string>
...
    <string name="no_search_results">No search results</string>
    <string name="compare_with">Compare with</string>
    <string name="add_entry">Add entry</string>
    <string name="save_as">Save as</string>

...
    <string name="new_entry">New entry</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="no_changes">No changes</string>
    <string name="url_cap">URL</string>
    <string name="notes">Notes</string>
    <string name="confirm_password">Confirm password</string>
    <string name="does_not_match_with_password">Does not match with password</string>
    <string name="value">Value</string>
...
    <string name="field_value">Field Value</string>
    <string name="empty_field_name_message">Field Name shouldn\'t be empty</string>
    <string name="title">Title</string>
    <string name="should_not_be_empty">Should not be empty</string>
    <string name="discard_changes">Discard changes?</string>
...
    <!-- Storage screen -->
    <string name="select_storage">Select storage</string>
    <string name="private_app_storage">Private app storage</string>
    <string name="external_storage">External storage</string>
    <string name="external_storage_system_picker">External storage (System File Picker)</string>
...
    <string name="all_files_permission_dialog_message">To complete this action application needs the permission to manage all files. After pressing "Grant" button, please select <b>Allow access to manage all files</b> option on the next screen</string>
    <string name="unable_to_authenticate">Unable to authenticate</string>
    <string name="make_a_copy_and_select">Make a copy and Select</string>
    <string name="copy_and_select_description">Copy will be created inside application private directory</string>

...
    <string name="application">Application</string>
    <string name="database_settings">Database settings</string>
    <string name="application_settings">Application settings</string>

    <!-- AppSettings screen -->
...
    <string name="pref_is_lock_database_on_back_title">Press \'Back\' to lock</string>
    <string name="pref_is_lock_database_on_back_summary">Lock database when pressing \'Back\' from the root group screen</string>
    <string name="pref_keepass_implementation_title">KeePass opening library</string>
    <string name="pref_keepass_implementation_summary">Library used to open database files</string>
    <string name="pref_is_file_log_enabled_title">Write log to file</string>
...
