...
            created = parseDate("2020-02-01"),
            modified = parseDate("2020-02-01")
        )

        private val ENTRY_GOOGLE = EntryEntity(
            title = "Google",
            username = "john.doe@example.com",
            password = "abc123",
            url = "https://google.com",
            created = parseDate("2020-01-03"),
            modified = parseDate("2020-01-03")
        )

...
            created = parseDate("2020-01-05"),
            modified = parseDate("2020-01-05")
        )

        private val ENTRY_MICROSOFT_MODIFIED = EntryEntity(
            title = "Microsoft",
            username = "john.galt@example.com",
            password = "qwerty",
            url = "https://microsoft.com",
            created = parseDate("2020-01-05"),
            modified = parseDate("2020-01-05")
        )

...
