...
    <string name="file_is_not_loaded" translatable="false">File is not loaded</string>
    <string name="new_file_created" translatable="false">New file created</string>
    <string name="db_opened" translatable="false">DB opened</string>
    <string name="db_closed" translatable="false">DB closed</string>
    <string name="entry_added" translatable="false">Entry added</string>
    <string name="storage_access_framework" translatable="false">Storage Access Framework</string>
    <string name="fake_file_system" translatable="false">Fake File System</string>
    <string name="reset_test_data" translatable="false">Reset test data</string>
    <string name="check_exists" translatable="false">Check exists</string>
    <string name="file_exits_with_str" translatable="false">File exists: %s</string>
    <string name="create_file" translatable="false">Create file</string>
    <string name="get_root" translatable="false">Get root</string>
    <string name="fake_biometric_setup_message" translatable="false">This is a fake biometric setup dialog. Allow biometric setup?</string>
...
