...

    fun onKeepassImplementationClicked() {
        val items = KeepassImplementation.entries
            .map { implementation ->
                val title = when (implementation) {
                    KeepassImplementation.KOTPASS -> "kotpass"
                    KeepassImplementation.KEEPASS_RS -> "keepass-rs"
                }

                val description = when (implementation) {
                    KeepassImplementation.KOTPASS -> "https://github.com/keemobile/kotpass"
                    KeepassImplementation.KEEPASS_RS -> "https://github.com/sseemayer/keepass-rs"
                }
...
