...
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="screen:groups">

        <FrameLayout
            android:id="@+id/navigationPanelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/kpSecondaryBackgroundColor"
...
