appId: com.ivanovsky.passnotes.automation
---
- runFlow:
    file: "../common/setup-database-file.yaml"
    env:
      DATABASE_FILE: "basic-key-file.kdbx"
- runFlow:
    file: "../common/select-key-file.yaml"
    env:
      KEY_FILE: "key"
- runFlow: "../common/set-keepassrs-in-settings.yaml"

- assertVisible: "basic-key-file.kdbx"
- assertVisible: "KEY"
- tapOn: "Unlock button"
- assertVisible: "Basic entry"
