appId: com.ivanovsky.passnotes.automation
---
- runFlow:
    file: "../common/setup-database-file.yaml"
    env:
      DATABASE_FILE: "basic.kdbx"
- runFlow: "../common/set-keepassrs-in-settings.yaml"
- runFlow:
    file: "../common/unlock-database.yaml"
    env:
      PASSWORD: "abc123"

- tapOn: "Basic entry"

- assertVisible: "Title"
- assertVisible: "Basic entry"
- assertVisible: "UserName"
- assertVisible: "john.doe@example.com"
- assertVisible: "Password"
- assertVisible: "URL"
- assertVisible: "https://url.com"
- assertVisible: "Notes"
- assertVisible: "Basic notes"
